crates/philo-tui/src/tests/snapshots/app_help.snap
---
source: crates/philo-tui/src/app/state/tests.rs
assertion_line: 486
expression: "texts(&appended(&run(&mut app, \"/help\"))).join(\"\\n\")"
---
/help
commands:
  /help                                                       commands and key bindings
  /new                                                        start a new session
  /sessions                                                   pick a session to continue
  /rename <title>                                             rename the current session
  /models                                                     pick a model and its reasoning tier
  /compact                                                    summarize older context (idle only)
  /image <path>                                               attach an image to the next message
  /verbose                                                    toggle the information tier (same as Ctrl+O)
  /status                                                     session, model, usage and the tool lineup
  /theme [original|recommended|comfort|sat N|light N|bold N]  color scheme preset or slider retune
  /config                                                     effective configuration and its source layers
  /quit                                                       leave the session
keys:
  Enter     submit (queues while busy)
  Ctrl+J    newline (Shift+Enter where supported)
  Esc       cancel the running turn
  Ctrl+C    copy selection, or clear / cancel / twice to exit
  Ctrl+D    exit on an empty prompt
  Ctrl+O    detail tier   ·   Ctrl+L redraw
  Tab       complete a command   ·   Up/Down input history
  scroll    wheel or PageUp/Dn
  Home/End  line start/end, or transcript top/bottom
