crates/philo-tui/src/tests/snapshots/command_menu.snap
---
source: crates/philo-tui/src/app/state/tests.rs
expression: "rows.join(\"\\n\")"
---
› /help            commands and key bindings
  /new             start a new session
  /sessions        pick a session to continue
  /rename <title>  rename the current session
  /models          pick a model and its reasoning tier
  /compact         summarize older context (idle only)
  /image <path>    attach an image to the next message
  /verbose         toggle the information tier (same as Ctrl+O)
  /status          session, model, usage and the tool lineup
  /config          effective configuration and its source layers
  /quit            leave the session
