crates/philo-tui/src/tests/snapshots/confirmation_flow.snap
---
source: crates/philo-tui/src/driver/host_effects.rs
expression: frame
---
╭─ Approval required ────────╮
│                            │
│ write workspace file       │
│ path: src/main.rs          │
│ operation: replace         │
│                            │
│ [Enter/y] allow · [n] deny │
╰────────────────────────────╯
