crates/philo-tui/src/tests/snapshots/confirmation_overlay.snap
---
source: crates/philo-tui/src/app/overlay.rs
expression: prompt.frame(9).to_text()
---
╭─ Approval required ────────╮
│                            │
│ run_command                │
│ cargo test -p philo-tui    │
│ working directory: /repo   │
│                            │
│ [Enter/y] allow · [n] deny │
╰────────────────────────────╯
