crates/philo-tui/src/tests/snapshots/host_backed_commands.snap
---
source: crates/philo-tui/src/driver/host_effects.rs
assertion_line: 365
expression: "output.join(\"\\n\")"
---
/new
new session: fresh
/model model-b
model: model-b
/reasoning high
reasoning: high (from the next turn on)
/image shots/diagram.png
image queued: shots/diagram.png (1 waiting for the next message)
/verbose
info level: verbose
/status
model-b  fresh  verbose
shots/diagram.png
tools (3):
  read_file [read-only]
  write_file [workspace]
  shell [system]
/config
config (effective):
  model       = model-b  [project]
  api_key_env = PHILO_API_KEY  [global]
/quit
[exit]
