crates/philo-tui/src/tests/snapshots/m12_complete_interaction.snap
---
source: crates/philo-tui/src/tests/flow.rs
expression: "output.join(\"\\n\")"
---
Meta: /sessions
overlay:
sessions  1/2
> s-1                    | loading preview...
  s-image                |
                         |
                         |
                         |
enter switch  ·  ↑↓ select  ·  esc close
Meta: session s-image
User: 
User: › look at this
User:   [image image/png, 4 bytes]
User: 
overlay:
approval required  ·  write workspace file
path: src/main.rs
y allow  ·  n / esc deny
Meta: allowed: write workspace file
confirmation: Allow
User: 
User: › first prompt
User: 
Notice: busy: the message is queued behind the active turn
User: 
User: › queued follow-up
User: 
Notice: queued behind the active turn
Notice: previous turn did not end cleanly and was sealed; its tool calls may have executed without recorded results
Reasoning: think
Reasoning:   checking
Answer: answer line
Tool: • read  src/main.rs
Notice: turn cancelled (user)
Meta: done (cancelled)
