crates/philo-tui/src/tests/snapshots/m13_automatic_compaction_events.snap
---
source: crates/philo-tui/src/tests/compaction.rs
expression: "output.join(\"\\n\")"
---
status: model model-a · session s-1 · compacting [|] · tokens in 9000 out -
Meta: context compacted
status: model model-a · session s-1 · busy
Error: compaction failed: summary model unavailable; continuing without compaction
partial: Some((Answer, "turn continues"))
status: model model-a · session s-1 · busy · tokens in 4000 out -
