crates/philo-tui/src/tests/snapshots/m13_compaction_spinner_cancel_and_rejection.snap
---
source: crates/philo-tui/src/tests/compaction.rs
expression: "format!(\"START\\n{}\\n{frame_zero:?}\\n{frame_one:?}\\n\\nDUPLICATE\\n{}\\n\\nESC\\n{}\\nCORNER {}\\n\\nBUSY\\n{}\",\nappended(&started).join(\"\\n\"), appended(&duplicate).join(\"\\n\"),\nappended(&cancelled).join(\"\\n\"), corner_word(&app),\nappended(&refused_busy).join(\"\\n\"),)"
---
START
Meta: /compact
("⠋", "Compacting…")
("⠙", "Compacting…")

DUPLICATE
Meta: /compact
Error: error: context compaction is already running; press Esc to cancel it

ESC

CORNER Compacting…

BUSY
Meta: /compact
Error: error: context can only be compacted while idle; a turn is still running
