crates/philo-tui/src/tests/snapshots/m14_complete_stability_flow.snap
---
source: crates/philo-tui/src/tests/integration.rs
expression: "format!(\"HISTORY\\n{history}\\n\\nTOOL\\n{tool_screen}\\n\\nCANCELLING\\n{cancelling_screen}\\n\\nAPPROVAL\\n{approval_screen}\")"
---
HISTORY
Reasoning: think
Reasoning:   checking constraints
Answer: # Stable output
Answer: 012345678901234567890123456789012345678901234567890123456789012345678...
Answer: ```rust
Answer: fn main() { println!("稳定"); }
Answer: ```
Tool: • read_file  src/中文.rs
Meta: context compacted
Answer: after tool
Answer:  late-but-preserved
Notice: turn cancelled (user)
Meta: done (cancelled)

TOOL
00:     8901234567890123456789012345678901
01:     23456789 中 文  é 👩‍💻
02:     ```rust
03:     fn main() { println!("稳 定 "); }
04:     ```
05: 
06:   read_file  path: src/中 文 .rs
07:   | tool  read_file
08:     long composer draft 中 文  é 👩‍💻
09:     long composer draft 中 文  é 👩‍💻
10:     long composer draft
11: model-m14  session-m14  queued 1

CANCELLING
00:     fn main() { println!("稳 定 "); }
01:     ```
02: 
03:   • read_file  src/中 文 .rs
04:   context compacted
05:   • after tool
06:   • late-but-preserved
07:   | cancel  user
08:     long composer draft 中 文  é 👩‍💻
09:     long composer draft 中 文  é 👩‍💻
10:     long composer draft
11: model-m14  session-m14  queued 1

APPROVAL
00: approval required  ·  write workspace...
01: src/中 文 .rs
02: y allow  ·  n / esc deny
03: 
04: 
05: 
06: 
07:   ! Approval required
08:     long composer draft 中 文  é 👩‍💻
09:     long composer draft 中 文  é 👩‍💻
10:     long composer draft
11: model-m14  session-m14
